More updates for 2024.

--- a/include/nav.html
+++ b/include/nav.html
@@ -6,19 +6,19 @@
 	   style="background-color:black;">
       <tr valign=bottom>
 	<td width=50% align=left>
-	  <a href="http://www.uiowa.edu"
+	  <a href="https://uiowa.edu"
 	     style="font-variant:small-caps;color:lightgray;">
 	    University of Iowa</a>
 	</td>
 	<td width=50% align=right>
-	  <a href="http://www.clas.uiowa.edu"
+	  <a href="https://clas.uiowa.edu"
 	     style="font-variant:small-caps;color:lightgray;">
 	    College of Liberal Arts and Sciences</a>
 	</td>
       </tr>
     </table>
 
-    <a href="http://www.stat.uiowa.edu">
+    <a href="https://stat.uiowa.edu">
       <img src="img/stats.png" width=1000px>
     </a>
     
